Fix 'Umbrello Crash On Moving the Seconds element in the Class Diagram'

Break the recursive event loop in UMLScene::mouseMoveEvent().

BUG:416013
FIXED-IN: 2.30.2 (KDE Applications 19.12.2)